LEX_and_YACC/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> declare expression
Rule 2     expression -> inCase expression
Rule 3     expression -> repeat expression
Rule 4     expression -> since expression
Rule 5     expression -> dot expression
Rule 6     expression -> initialize expression
Rule 7     expression -> fill expression
Rule 8     expression -> increase expression
Rule 9     expression -> decrease expression
Rule 10    expression -> diagonal_right expression
Rule 11    expression -> diagonal_left expression
Rule 12    expression -> procedure expression
Rule 13    expression -> call expression
Rule 14    expression -> empty
Rule 15    declare -> DECLARE ID SEMICOLON
Rule 16    declare -> DECLARE ID DEFAULT NUMBER SEMICOLON
Rule 17    inCase -> INCASE when1 ifnot ENDINCASE SEMICOLON
Rule 18    inCase -> INCASE ID when2 ifnot ENDINCASE SEMICOLON
Rule 19    when1 -> WHEN ID CONDITION sentence_when1 THEN LBRACKET expression RBRACKET when1
Rule 20    when1 -> empty
Rule 21    when2 -> WHEN CONDITION sentence THEN LBRACKET expression RBRACKET when2
Rule 22    when2 -> empty
Rule 23    ifnot -> IFNOT LBRACKET expression RBRACKET
Rule 24    sentence -> ID
Rule 25    sentence -> NUMBER
Rule 26    sentence_when1 -> ID
Rule 27    sentence_when1 -> NUMBER
Rule 28    repeat -> REPEAT expression until_find SEMICOLON
Rule 29    until_find -> TOFIND sentence CONDITION sentence
Rule 30    since -> FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
Rule 31    dot -> DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
Rule 32    increase -> INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
Rule 33    decrease -> DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
Rule 34    initialize -> INITIALIZE LPAREN ID RPAREN SEMICOLON
Rule 35    fill -> FILL LPAREN fillSentence RPAREN SEMICOLON
Rule 36    fillSentence -> ID
Rule 37    fillSentence -> NUMBER
Rule 38    diagonal_left -> DIAGL LPAREN sentence RPAREN SEMICOLON
Rule 39    diagonal_right -> DIAGR LPAREN sentence RPAREN SEMICOLON
Rule 40    empty -> <empty>
Rule 41    localDeclare -> DECLARE ID SEMICOLON
Rule 42    localDeclare -> DECLARE ID DEFAULT NUMBER SEMICOLON
Rule 43    localExpression -> inCase localExpression
Rule 44    localExpression -> repeat localExpression
Rule 45    localExpression -> since localExpression
Rule 46    localExpression -> dot localExpression
Rule 47    localExpression -> initialize localExpression
Rule 48    localExpression -> fill localExpression
Rule 49    localExpression -> increase localExpression
Rule 50    localExpression -> decrease localExpression
Rule 51    localExpression -> diagonal_right localExpression
Rule 52    localExpression -> diagonal_left localExpression
Rule 53    localExpression -> procedure localExpression
Rule 54    localExpression -> empty
Rule 55    params -> oneParam
Rule 56    params -> moreParam
Rule 57    params -> empty
Rule 58    oneParam -> ID params
Rule 59    moreParam -> COMMA ID params
Rule 60    procedure -> PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
Rule 61    params_call -> oneParam_call
Rule 62    params_call -> moreParam_call
Rule 63    params_call -> empty
Rule 64    oneParam_call -> ID params_call
Rule 65    oneParam_call -> NUMBER params_call
Rule 66    moreParam_call -> COMMA ID params_call
Rule 67    moreParam_call -> COMMA NUMBER params_call
Rule 68    call -> CALL ID LPAREN params_call RPAREN SEMICOLON

Terminals, with rules where they appear

CALL                 : 68
COLON                : 60
COLOR                : 31
COMMA                : 31 31 32 33 59 66 67
CONDITION            : 19 21 29 30
DECLARE              : 15 16 41 42
DECREASE             : 33
DEFAULT              : 16 42
DIAGL                : 38
DIAGR                : 39
DO                   : 30
DOT                  : 31
END                  : 60
ENDFROM              : 30
ENDINCASE            : 17 18
FILL                 : 35
FROM                 : 30
ID                   : 15 16 18 19 24 26 32 33 34 36 41 42 58 59 60 64 66 68
IFNOT                : 23
INCASE               : 17 18
INCREASE             : 32
INITIALIZE           : 34
LBRACKET             : 19 21 23
LPAREN               : 31 32 33 34 35 38 39 60 68
NUMBER               : 16 25 27 37 42 65 67
PROCEDURE            : 60
RBRACKET             : 19 21 23
REPEAT               : 28
RPAREN               : 31 32 33 34 35 38 39 60 68
SEMICOLON            : 15 16 17 18 28 30 31 32 33 34 35 38 39 41 42 60 68
START                : 60
THEN                 : 19 21
TOFIND               : 29
UNTIL                : 30
WHEN                 : 19 21
error                : 

Nonterminals, with rules where they appear

call                 : 13
declare              : 1 30
decrease             : 9 50
diagonal_left        : 11 52
diagonal_right       : 10 51
dot                  : 5 46
empty                : 14 20 22 54 57 63
expression           : 1 2 3 4 5 6 7 8 9 10 11 12 13 19 21 23 28 30 0
fill                 : 7 48
fillSentence         : 35
ifnot                : 17 18
inCase               : 2 43
increase             : 8 49
initialize           : 6 47
localDeclare         : 60
localExpression      : 43 44 45 46 47 48 49 50 51 52 53 60
moreParam            : 56
moreParam_call       : 62
oneParam             : 55
oneParam_call        : 61
params               : 58 59 60
params_call          : 64 65 66 67 68
procedure            : 12 53
repeat               : 3 44
sentence             : 21 29 29 30 31 31 32 33 38 39
sentence_when1       : 19
since                : 4 45
until_find           : 28
when1                : 17 19
when2                : 18 21

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (28) repeat -> . REPEAT expression until_find SEMICOLON
    (30) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (31) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (34) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (35) fill -> . FILL LPAREN fillSentence RPAREN SEMICOLON
    (32) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (33) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (39) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (38) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (60) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (68) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (40) empty -> .

    DECLARE         shift and go to state 28
    INCASE          shift and go to state 6
    REPEAT          shift and go to state 19
    FROM            shift and go to state 25
    DOT             shift and go to state 11
    INITIALIZE      shift and go to state 4
    FILL            shift and go to state 7
    INCREASE        shift and go to state 23
    DECREASE        shift and go to state 18
    DIAGR           shift and go to state 22
    DIAGL           shift and go to state 5
    PROCEDURE       shift and go to state 15
    CALL            shift and go to state 20
    $end            reduce using rule 40 (empty -> .)

    decrease                       shift and go to state 8
    diagonal_right                 shift and go to state 1
    procedure                      shift and go to state 16
    empty                          shift and go to state 2
    call                           shift and go to state 17
    declare                        shift and go to state 27
    diagonal_left                  shift and go to state 3
    fill                           shift and go to state 14
    repeat                         shift and go to state 21
    dot                            shift and go to state 9
    increase                       shift and go to state 10
    initialize                     shift and go to state 24
    expression                     shift and go to state 26
    since                          shift and go to state 12
    inCase                         shift and go to state 13

state 1

    (10) expression -> diagonal_right . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (28) repeat -> . REPEAT expression until_find SEMICOLON
    (30) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (31) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (34) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (35) fill -> . FILL LPAREN fillSentence RPAREN SEMICOLON
    (32) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (33) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (39) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (38) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (60) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (68) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (40) empty -> .

    DECLARE         shift and go to state 28
    INCASE          shift and go to state 6
    REPEAT          shift and go to state 19
    FROM            shift and go to state 25
    DOT             shift and go to state 11
    INITIALIZE      shift and go to state 4
    FILL            shift and go to state 7
    INCREASE        shift and go to state 23
    DECREASE        shift and go to state 18
    DIAGR           shift and go to state 22
    DIAGL           shift and go to state 5
    PROCEDURE       shift and go to state 15
    CALL            shift and go to state 20
    $end            reduce using rule 40 (empty -> .)
    TOFIND          reduce using rule 40 (empty -> .)
    RBRACKET        reduce using rule 40 (empty -> .)
    ENDFROM         reduce using rule 40 (empty -> .)

    decrease                       shift and go to state 8
    diagonal_right                 shift and go to state 1
    procedure                      shift and go to state 16
    empty                          shift and go to state 2
    call                           shift and go to state 17
    declare                        shift and go to state 27
    diagonal_left                  shift and go to state 3
    fill                           shift and go to state 14
    repeat                         shift and go to state 21
    dot                            shift and go to state 9
    increase                       shift and go to state 10
    initialize                     shift and go to state 24
    expression                     shift and go to state 29
    since                          shift and go to state 12
    inCase                         shift and go to state 13

state 2

    (14) expression -> empty .

    $end            reduce using rule 14 (expression -> empty .)
    TOFIND          reduce using rule 14 (expression -> empty .)
    RBRACKET        reduce using rule 14 (expression -> empty .)
    ENDFROM         reduce using rule 14 (expression -> empty .)


state 3

    (11) expression -> diagonal_left . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (28) repeat -> . REPEAT expression until_find SEMICOLON
    (30) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (31) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (34) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (35) fill -> . FILL LPAREN fillSentence RPAREN SEMICOLON
    (32) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (33) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (39) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (38) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (60) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (68) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (40) empty -> .

    DECLARE         shift and go to state 28
    INCASE          shift and go to state 6
    REPEAT          shift and go to state 19
    FROM            shift and go to state 25
    DOT             shift and go to state 11
    INITIALIZE      shift and go to state 4
    FILL            shift and go to state 7
    INCREASE        shift and go to state 23
    DECREASE        shift and go to state 18
    DIAGR           shift and go to state 22
    DIAGL           shift and go to state 5
    PROCEDURE       shift and go to state 15
    CALL            shift and go to state 20
    $end            reduce using rule 40 (empty -> .)
    TOFIND          reduce using rule 40 (empty -> .)
    RBRACKET        reduce using rule 40 (empty -> .)
    ENDFROM         reduce using rule 40 (empty -> .)

    decrease                       shift and go to state 8
    diagonal_right                 shift and go to state 1
    procedure                      shift and go to state 16
    empty                          shift and go to state 2
    call                           shift and go to state 17
    declare                        shift and go to state 27
    diagonal_left                  shift and go to state 3
    fill                           shift and go to state 14
    repeat                         shift and go to state 21
    dot                            shift and go to state 9
    increase                       shift and go to state 10
    initialize                     shift and go to state 24
    expression                     shift and go to state 30
    since                          shift and go to state 12
    inCase                         shift and go to state 13

state 4

    (34) initialize -> INITIALIZE . LPAREN ID RPAREN SEMICOLON

    LPAREN          shift and go to state 31


state 5

    (38) diagonal_left -> DIAGL . LPAREN sentence RPAREN SEMICOLON

    LPAREN          shift and go to state 32


state 6

    (17) inCase -> INCASE . when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> INCASE . ID when2 ifnot ENDINCASE SEMICOLON
    (19) when1 -> . WHEN ID CONDITION sentence_when1 THEN LBRACKET expression RBRACKET when1
    (20) when1 -> . empty
    (40) empty -> .

    ID              shift and go to state 35
    WHEN            shift and go to state 34
    IFNOT           reduce using rule 40 (empty -> .)

    empty                          shift and go to state 33
    when1                          shift and go to state 36

state 7

    (35) fill -> FILL . LPAREN fillSentence RPAREN SEMICOLON

    LPAREN          shift and go to state 37


state 8

    (9) expression -> decrease . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (28) repeat -> . REPEAT expression until_find SEMICOLON
    (30) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (31) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (34) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (35) fill -> . FILL LPAREN fillSentence RPAREN SEMICOLON
    (32) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (33) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (39) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (38) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (60) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (68) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (40) empty -> .

    DECLARE         shift and go to state 28
    INCASE          shift and go to state 6
    REPEAT          shift and go to state 19
    FROM            shift and go to state 25
    DOT             shift and go to state 11
    INITIALIZE      shift and go to state 4
    FILL            shift and go to state 7
    INCREASE        shift and go to state 23
    DECREASE        shift and go to state 18
    DIAGR           shift and go to state 22
    DIAGL           shift and go to state 5
    PROCEDURE       shift and go to state 15
    CALL            shift and go to state 20
    $end            reduce using rule 40 (empty -> .)
    TOFIND          reduce using rule 40 (empty -> .)
    RBRACKET        reduce using rule 40 (empty -> .)
    ENDFROM         reduce using rule 40 (empty -> .)

    fill                           shift and go to state 14
    diagonal_right                 shift and go to state 1
    procedure                      shift and go to state 16
    empty                          shift and go to state 2
    call                           shift and go to state 17
    declare                        shift and go to state 27
    diagonal_left                  shift and go to state 3
    decrease                       shift and go to state 8
    repeat                         shift and go to state 21
    dot                            shift and go to state 9
    increase                       shift and go to state 10
    initialize                     shift and go to state 24
    expression                     shift and go to state 38
    since                          shift and go to state 12
    inCase                         shift and go to state 13

state 9

    (5) expression -> dot . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (28) repeat -> . REPEAT expression until_find SEMICOLON
    (30) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (31) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (34) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (35) fill -> . FILL LPAREN fillSentence RPAREN SEMICOLON
    (32) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (33) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (39) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (38) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (60) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (68) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (40) empty -> .

    DECLARE         shift and go to state 28
    INCASE          shift and go to state 6
    REPEAT          shift and go to state 19
    FROM            shift and go to state 25
    DOT             shift and go to state 11
    INITIALIZE      shift and go to state 4
    FILL            shift and go to state 7
    INCREASE        shift and go to state 23
    DECREASE        shift and go to state 18
    DIAGR           shift and go to state 22
    DIAGL           shift and go to state 5
    PROCEDURE       shift and go to state 15
    CALL            shift and go to state 20
    $end            reduce using rule 40 (empty -> .)
    TOFIND          reduce using rule 40 (empty -> .)
    RBRACKET        reduce using rule 40 (empty -> .)
    ENDFROM         reduce using rule 40 (empty -> .)

    decrease                       shift and go to state 8
    diagonal_right                 shift and go to state 1
    procedure                      shift and go to state 16
    empty                          shift and go to state 2
    call                           shift and go to state 17
    declare                        shift and go to state 27
    diagonal_left                  shift and go to state 3
    fill                           shift and go to state 14
    repeat                         shift and go to state 21
    dot                            shift and go to state 9
    increase                       shift and go to state 10
    initialize                     shift and go to state 24
    expression                     shift and go to state 39
    since                          shift and go to state 12
    inCase                         shift and go to state 13

state 10

    (8) expression -> increase . expression
    (1) expression -> . declare expression
    (2) expression -> . inCase expression
    (3) expression -> . repeat expression
    (4) expression -> . since expression
    (5) expression -> . dot expression
    (6) expression -> . initialize expression
    (7) expression -> . fill expression
    (8) expression -> . increase expression
    (9) expression -> . decrease expression
    (10) expression -> . diagonal_right expression
    (11) expression -> . diagonal_left expression
    (12) expression -> . procedure expression
    (13) expression -> . call expression
    (14) expression -> . empty
    (15) declare -> . DECLARE ID SEMICOLON
    (16) declare -> . DECLARE ID DEFAULT NUMBER SEMICOLON
    (17) inCase -> . INCASE when1 ifnot ENDINCASE SEMICOLON
    (18) inCase -> . INCASE ID when2 ifnot ENDINCASE SEMICOLON
    (28) repeat -> . REPEAT expression until_find SEMICOLON
    (30) since -> . FROM declare UNTIL CONDITION sentence DO expression ENDFROM SEMICOLON
    (31) dot -> . DOT LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON
    (34) initialize -> . INITIALIZE LPAREN ID RPAREN SEMICOLON
    (35) fill -> . FILL LPAREN fillSentence RPAREN SEMICOLON
    (32) increase -> . INCREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (33) decrease -> . DECREASE LPAREN ID COMMA sentence RPAREN SEMICOLON
    (39) diagonal_right -> . DIAGR LPAREN sentence RPAREN SEMICOLON
    (38) diagonal_left -> . DIAGL LPAREN sentence RPAREN SEMICOLON
    (60) procedure -> . PROCEDURE ID LPAREN params RPAREN localDeclare START COLON localExpression END SEMICOLON
    (68) call -> . CALL ID LPAREN params_call RPAREN SEMICOLON
    (40) empty -> .

    DECLARE         shift and go to state 28
    INCASE          shift and go to state 6
    REPEAT          shift and go to state 19
    FROM            shift and go to state 25
    DOT             shift and go to state 11
    INITIALIZE      shift and go to state 4
    FILL            shift and go to state 7
    INCREASE        shift and go to state 23
    DECREASE        shift and go to state 18
    DIAGR           shift and go to state 22
    DIAGL           shift and go to state 5
    PROCEDURE       shift and go to state 15
    CALL            shift and go to state 20
    $end            reduce using rule 40 (empty -> .)
    TOFIND          reduce using rule 40 (empty -> .)
    RBRACKET        reduce using rule 40 (empty -> .)
    ENDFROM         reduce using rule 40 (empty -> .)

    decrease                       shift and go to state 8
    diagonal_right                 shift and go to state 1
    procedure                      shift and go to state 16
    empty                          shift and go to state 2
    call                           shift and go to state 17
    declare                        shift and go to state 27
    diagonal_left                  shift and go to state 3
    fill                           shift and go to state 14
    repeat                         shift and go to state 21
    dot                            shift and go to state 9
    increase                       shift and go to state 10
    initialize                     shift and go to state 24
    expression                     shift and go to state 40
    since                          shift and go to state 12
    inCase                         shift and go to state 13

state 11

    (31) dot -> DOT . LPAREN sentence COMMA sentence COMMA COLOR RPAREN SEMICOLON

    LPAREN          shift and go to state 41


state 12
